css/core.css
/* ... */
th {
  background: var(--sat-search-shortcuts);
}

tr:nth-child(even) {
  background: var(--sat-search-shortcuts);
}

table caption {
  font-weight: bold;
  margin-bottom: 0.5rem;
}

textarea {
  max-width: 100%;
}

ol,
ul {
  padding-left: 2rem;
}

li {
  margin-top: 0.4rem;
}

ul ul,
ol ul,
ul ol,
ol ol {
  margin-bottom: 0;
}

mark {
  padding: 3px 6px;
  background: var(--sat-txt-selector-clr);
  color: var(--sat-txt-selector-clr-after);
}

textarea,
select,
input {
  padding: 14px 14px;
  margin-bottom: 0.5rem;
  background: var(--sat-search-shortcuts);
  color: var(--sat-ids);
  border: 2px solid transparent;
  border-radius: var(--sat-border-radius);
  box-shadow: none;
  box-sizing: border-box;
  outline: none;
}

.username-section input:hover,
textarea:hover,
select:hover,
input:hover {
  transition: var(--transition-speed-default);
  border: 2px solid var(--sat-accent-color1);
}

textarea:focus,
select:focus,
input:focus {
  border: 2px solid var(--sat-accent-color1);
}

img {
  max-width: 100%;
  border-style: none;
}

/* 
========
+ Saturn Startpage Main Core v4.0.0 +
========
*/

/* == Favorites background stuff == */

#content {
  background: var(--sat-search-shortcuts);
}

.search-bar:hover {
  background: var(--sat-input-hover);
}
.search-bar:focus {
  background: var(--sat-search-bar-focus);
}

/* == Settings background color == */

.wallpaper_modal_content,
.favorites_modal_content,
.sounds-modal-content,
.settings-content {
  background: var(--sat-setting-bg-color);
}

.setting-button,
.app,
.cuteapps,
.removebtn {
  background: var(--sat-search-shortcuts);
}

/* 
========
+ Everything that makes use of a similar
transition speed. +
========
*/
#fav-link a:hover,
.snip-wid button,
.overlay,
.setting-button:hover,
.btn-hide2:hover,
.app:hover,
.slider:before,
.search-bar:hover,
.search-bar:focus .app:hover {
  transition: var(--transition-speed-default);
}

/* == Force the use of while 
color to fix some issues == */

.close-wallpaper:hover,
.save-button:hover,
.cancel-fav-btn:hover,
.removebtn:hover,
.setting-button:hover,
.app:hover {
  color: var(--for-white);
}

.app {
  border: 3px solid transparent;
  background: var(--sat-search-shortcuts);
}

.app:hover {
  border: 3px solid transparent;
  background-color: var(--sat-accent-color1);
}

.closebtn:hover {
  border-color: var(--moreapps-hovering-clr);
}

#fav-link a:hover {
  background-color: var(--favorites-hover);
  transition: var(--transition-speed-default);
}

.removebtn:hover {
  background-color: var(--delete-warning-border);
  border: 1px solid var(--delete-warning-bg);
  transition: var(--transition-speed-default);
}

.close-wallpaper:hover,
.cancel-fav-btn:hover {
  transition: var(--transition-speed-default);
  background-color: #d752524b !important;
  color: var(--delete-warning-bg) !important;
}

/* == Make everything use the 
current color var == */

.setting-button,
.app,
.cuteapps,
.removebtn,
.setting-button i,
#fav-link a:hover,
.container {
  color: var(--sat-ids);
}

/* == Some stuff that require the cursor 
to become a pointer == */
.slider,
ul.tabs li,
.app,
#favorite-links:hover,
.close-button,
.close-sounds,
.close-wallpaper,
.new-close-fav {
  cursor: pointer;
}

/* == Setting up everything to 
use the correct border radius == */
.search-bar,
.app,
.tooltiptext,
#content,
#fav-link li,
#fav-link img,
#fav-link a,
#add-link-form,
#add-link-form input,
#new-link-button button,
#add-link-form button,
.settings-background,
.settings-background-warning {
  border-radius: var(--sat-border-radius);
}

.mobile-warning {
  background-color: var(--delete-warning-bg);
  border-radius: 5px;
  visibility: hidden;
  font-weight: 700;
}
/* 
========
+ Mobile optimizations (work in progress..) +
========
*/

@media (max-width: 68.75em) {
  .wallpaper_modal_content,
  .favorites_modal_content,
  .sounds-modal-content {
    max-width: 90%;
  }

  .settings-content {
    width: 100% !important;
    height: 100% !important;
  }
  .tabs {
    position: static !important;
    margin: -10px;
    margin-top: -105px !important;
    overflow-x: hidden; /* Disable horizontal scroll */
    padding-top: 1px !important;
    border-radius: var(--sat-border-radius);
  }

  /* ul.tabs li {
    font-size: 12px !important;
  }
  ul.tabs li,
  ul.tabs li.current {
    background: transparent !important;
    width: 35px;
    padding: 10px 20px 1px 5px !important;
    font-size: 0px !important;
  } */
  .mobile-warning {
    visibility: visible;
  }
  /* ul.tabs li img:hover {
    background: var(--sat-search-shortcuts);
    color: var(--sat-accent-color1);
    transition: var(--transition-speed-default);
    box-shadow: 0px 12px 23px -16px var(--drop-shadow-color);
  }
  ul.tabs li img {
    padding: 15px 15px !important;
    border-radius: 10px;
  } */

  .tab-content {
    width: 100%;
    margin-left: -20px !important;
  }
  .username-section input {
  }
  .fav-content {
    width: 23rem !important;
    height: 36rem !important;
  }
  .settings-title {
    font-size: 1.5rem !important;
  }
  .version-text {
    padding: 5px 5px !important;
    color: var(--sat-accent-color1);
    font-weight: 600;
    text-decoration: none !important;
    font-size: 13px !important;
  }
}

